--- a/.github/workflows/mkdocs.yml
+++ b/.github/workflows/mkdocs.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           key: ${{ github.ref }}
           path: .cache
-      - run: pip install mkdocs-material mkdocs-drawio-file mkdocs-markmap
+      - run: pip install mkdocs-material mkdocs-drawio-file mkdocs-markmap mkdocs-glightbox
       - run: mkdocs gh-deploy --force
